--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "core-js": "^3.15.1",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
+    "net": "^1.0.2",
     "nuxt": "^2.15.7"
   }
 }
